# otel-python-logging

./: .gitignore  Dockerfile  README.md  compose.yaml  main.py  otel-collector.yaml  otel_logging.py  pyproject.toml
