[project]
name = "py-otel-example"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opentelemetry-api (>=1.32.0,<2.0.0)",
    "opentelemetry-sdk (>=1.32.0,<2.0.0)",
    "opentelemetry-exporter-otlp-proto-grpc (>=1.32.0,<2.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
